--- a/articles/css/mobile-style.css
+++ b/articles/css/mobile-style.css
@@ -89,8 +89,7 @@ footer p {
 
 .thum_box {
     display: block;
-    margin: 30px;
-    padding: 10px;
+    margin: 80px;
 	border-radius: 5px;
 	box-sizing: border-box;
 	box-shadow: 0 0 5px #999;
@@ -102,8 +101,8 @@ footer p {
 
 .thum_box img {
     height: 182px;
-    width: 260px;
-    margin: 50px;
+    width: fit-content;
+    margin-bottom: 50px;
     box-sizing: border-box;
 	box-shadow: 0 0 5px black;
 }
@@ -123,6 +122,7 @@ footer p {
 
 .text_content {
     list-style: none;
+    margin: 30px;
 }
 
 .container h1 {
@@ -130,6 +130,6 @@ footer p {
     padding: 0 8px 8px;
     border-bottom: 1.5px black solid;
     font-weight: normal;
-    margin-left: 30px;
-    margin-right: 30px;
+    margin-left: 80px;
+    margin-right: 80px;
 }
