--- a/articles/css/mobile-style.css
+++ b/articles/css/mobile-style.css
@@ -89,7 +89,10 @@ footer p {
 
 .thum_box {
     display: block;
-    margin: 80px;
+    margin-left: 80px;
+    margin-right: 80px;
+    margin-bottom: 50px;
+    margin-top: 25px;
 	border-radius: 5px;
 	box-sizing: border-box;
 	box-shadow: 0 0 5px #999;
@@ -100,9 +103,9 @@ footer p {
 }
 
 .thum_box img {
-    height: 182px;
+    height: 90px;
     width: fit-content;
-    margin-bottom: 50px;
+    margin-bottom: 20px;
     box-sizing: border-box;
 	box-shadow: 0 0 5px black;
 }
