--- a/articles/css/mobile-style.css
+++ b/articles/css/mobile-style.css
@@ -103,11 +103,10 @@ footer p {
 }
 
 .thum_box img {
-    height: 90px;
+    display: none;
+    height: 60px;
     width: fit-content;
     margin-bottom: 20px;
-    box-sizing: border-box;
-	box-shadow: 0 0 5px black;
 }
 
 .text_date {
@@ -117,6 +116,12 @@ footer p {
 
 .titleofarticle {
     font-size: 1.25rem;
+    color: #fff;
+    background-color: black;
+}
+
+.titleofarticle a:hover {
+    color: #728742;
 }
 
 .text_excerpt {
