--- a/css/mobile-style.css
+++ b/css/mobile-style.css
@@ -26,7 +26,7 @@ img {
 }
 
 .main-nav {
-    display: flex;
+    display: none;
     font-size: 0.75rem;
     text-transform: uppercase;
     margin-top: 40px;
@@ -61,4 +61,96 @@ img {
 .logo {
     font-size: 1.25rem;
     margin-top: 18px;
+}
+
+.main-nav-button {
+    display: none;
+    font-size: 0.75rem;
+    text-transform: uppercase;
+    margin-top: 40px;
+    list-style: none;
+    justify-content: space-between;
+}
+
+.main-navv-button li {
+    margin-left: 10px;
+}
+
+.main-navv-button a {
+    color: black;
+    text-shadow: -1px -1px 0 #fff, -1px -1px 0 #fff, -1px -1px 0 #fff, -1px -1px 0 #fff;
+}
+
+.main-navv-button a:hover {
+    color: #728742;
+}
+
+.drawer_hidden {
+    display: none;
+}
+
+.drawer_open {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    right: 20px;
+    z-index: 100;
+    cursor: pointer;
+}
+
+.drawer_open span,
+.drawer_open span:before,
+.drawer_open span:after {
+    content: '';
+    display: block;
+    height: 3px;
+    width: 25px;
+    border-radius: 3px;
+    background: #333;
+    transition: 0.5s;
+    position: absolute;
+}
+
+.drawer_open span:before {
+    bottom: 8px;
+}
+
+.drawer_open span:after {
+    top: 8px;
+}
+
+#drawer_input:checked ~ .drawer_open span {
+    background: rgba(255, 255, 255, 0);
+}
+
+#drawer_input:checked ~ .drawer_open span::before {
+    bottom: 0;
+    transform: rotate(45deg);
+}
+  
+#drawer_input:checked ~ .drawer_open span::after {
+    top: 0;
+    transform: rotate(-45deg);
+}
+    
+.nav_content {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0%;
+    left: 100%;
+    z-index: 99;
+    background: rgb(110, 110, 110);
+    transition: .5s;
+    text-align: center;
+    padding-top: 20px;
+}
+
+.nav_list {
+    list-style: none;
+}
+ 
+#drawer_input:checked ~ .nav_content {
+    left: 0;
 }
