--- a/css/style.css
+++ b/css/style.css
@@ -133,6 +133,7 @@ img {
     transition: .5s;
     text-align: center;
     padding-top: 20px;
+    display: none;
 }
 
 .main-navv-button li {
@@ -150,8 +151,10 @@ img {
 
 .nav_list {
     list-style: none;
+    display: none;
 }
 
 #drawer_input:checked ~ .nav_content {
     left: 0;
+    display: none;
 }
