--- a/css/mobile-style.css
+++ b/css/mobile-style.css
@@ -26,21 +26,23 @@ img {
 }
 
 .main-nav {
-    display: flex;
-    font-size: 0.75rem;
+    display: block;
+    font-size: 1.25rem;
     text-transform: uppercase;
     margin-top: 40px;
     list-style: none;
-    justify-content: space-between;
+    margin-left: 5%;
 }
 
 .main-nav li {
-    margin-left: 10px;
+    margin: 0;
+    padding: 10px;
 }
 
 .main-nav a {
     color: black;
     text-shadow: -1px -1px 0 #fff, -1px -1px 0 #fff, -1px -1px 0 #fff, -1px -1px 0 #fff;
+    display: block;
 }
 
 .main-nav a:hover {
@@ -62,3 +64,85 @@ img {
     font-size: 1.25rem;
     margin-top: 18px;
 }
+
+/* チェックボックスを非表示にする */
+.drawer_hidden {
+    display: none;
+  }
+  
+  /* ハンバーガーアイコンの設置スペース */
+  .drawer_open {
+    display: flex;
+    height: 1.25rem;
+    width: 1.25rem;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    z-index: 100;/* 重なり順を一番上にする */
+    cursor: pointer;
+    margin-top: 38px;
+  }
+  
+  /* ハンバーガーメニューのアイコン */
+  .drawer_open span,
+  .drawer_open span:before,
+  .drawer_open span:after {
+    content: '';
+    display: block;
+    height: 3px;
+    width: 25px;
+    border-radius: 3px;
+    background: #333;
+    transition: 0.5s;
+    position: absolute;
+  }
+  
+  /* 三本線の一番上の棒の位置調整 */
+  .drawer_open span:before {
+    bottom: 8px;
+  }
+  
+  /* 三本線の一番下の棒の位置調整 */
+  .drawer_open span:after {
+    top: 8px;
+  }
+  
+  /* アイコンがクリックされたら真ん中の線を透明にする */
+  #drawer_input:checked ~ .drawer_open span {
+    background: rgba(255, 255, 255, 0);
+  }
+  
+  /* アイコンがクリックされたらアイコンが×印になように上下の線を回転 */
+  #drawer_input:checked ~ .drawer_open span::before {
+    bottom: 0;
+    transform: rotate(45deg);
+  }
+  
+  #drawer_input:checked ~ .drawer_open span::after {
+    top: 0;
+    transform: rotate(-45deg);
+  }
+    
+/* メニューのデザイン*/
+.nav_content {
+    width: 60%;
+    height: 100%;
+    position: fixed;
+    top: 0%;
+    left: 100%; /* メニューを画面の外に飛ばす */
+    z-index: 99;
+    transition: .5s;
+    padding-top: 40px;
+    background: #dddd;
+  }
+  
+  /* メニュー黒ポチを消す */
+  .main-nav {
+    list-style: none;
+  }
+  
+/* アイコンがクリックされたらメニューを表示 */
+#drawer_input:checked ~ .nav_content {
+    left: 40%;
+    margin: 0 0 0 auto;
+  }
