--- a/profile/css/mobile-style.css
+++ b/profile/css/mobile-style.css
@@ -44,13 +44,13 @@ img {
 }
 
 .main-nav a {
-    color: black;
-    text-shadow: -1px -1px 0 #fff, -1px -1px 0 #fff, -1px -1px 0 #fff, -1px -1px 0 #fff;
+    color: white;
+    text-shadow: -1px -1px 0 black, -1px -1px 0 black, -1px -1px 0 black, -1px -1px 0 black;
     display: block;
 }
 
 .main-nav a:hover {
-    color: #728742;
+    color: #9f385b;
 }
 
 .page-header {
@@ -65,7 +65,7 @@ img {
 }
 
 .logo {
-    font-size: 1.25rem;
+    font-size: 1.825rem;
     margin-top: 18px;
 }
 
@@ -179,22 +179,22 @@ footer p {
   .drawer_open span:after {
     content: '';
     display: block;
-    height: 3px;
-    width: 25px;
-    border-radius: 3px;
-    background: #333;
+    height: 9px;
+    width: 75px;
+    border-radius: 9px;
+    background: whitesmoke;
     transition: 0.5s;
     position: absolute;
   }
   
   /* 三本線の一番上の棒の位置調整 */
   .drawer_open span:before {
-    bottom: 8px;
+    bottom: 24px;
   }
   
   /* 三本線の一番下の棒の位置調整 */
   .drawer_open span:after {
-    top: 8px;
+    top: 24px;
   }
   
   /* アイコンがクリックされたら真ん中の線を透明にする */
@@ -215,7 +215,7 @@ footer p {
     
 /* メニューのデザイン*/
 .nav_content {
-    width: 60%;
+    width: 20%;
     height: 100%;
     position: fixed;
     top: 0%;
@@ -223,7 +223,7 @@ footer p {
     z-index: 99;
     transition: .5s;
     padding-top: 40px;
-    background: #dddd;
+    background: #333;
   }
   
   /* メニュー黒ポチを消す */
@@ -233,6 +233,6 @@ footer p {
   
 /* アイコンがクリックされたらメニューを表示 */
 #drawer_input:checked ~ .nav_content {
-    left: 40%;
+    left: 80%;
     margin: 0 0 0 auto;
   }
