--- a/articles/css-articles/style.css
+++ b/articles/css-articles/style.css
@@ -106,6 +106,11 @@ aside {
     margin-bottom: 50px;
 }
 
+.guide {
+    color: black;
+    font-size: 1rem;
+}
+
 .post-title {
     font-size: 1.375rem;
     margin-right: 50px;
