--- a/profile/css/style.css
+++ b/profile/css/style.css
@@ -40,6 +40,10 @@ img {
 
 .main-nav li {
     margin-left: 36px;
+    margin-right: 40px;
+    margin-top: 10px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid gray;
 }
 
 .main-nav a {
