--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,10 @@ img {
 
 .main-nav li {
     margin-left: 36px;
+    margin-right: 40px;
+    margin-top: 10px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid white;
 }
 
 .main-nav a {
