--- a/articles/css/mobile-style.css
+++ b/articles/css/mobile-style.css
@@ -39,8 +39,10 @@ img {
 }
 
 .main-nav li {
-    margin: 10px;
-    padding: 10px;
+    margin-left: 36px;
+    margin-right: 40px;
+    margin-top: 10px;
+    padding-bottom: 10px;
     border-bottom: 1px solid white;
 }
 
