Make a positon of button fixed

--- a/css/mobile-style.css
+++ b/css/mobile-style.css
@@ -80,7 +80,7 @@ img {
     width: 1.25rem;
     justify-content: center;
     align-items: center;
-    position: relative;
+    position: fixed;
     z-index: 100;/* 重なり順を一番上にする */
     cursor: pointer;
     margin-top: 50px;
