--- a/articles/css-articles/mobile-style.css
+++ b/articles/css-articles/mobile-style.css
@@ -178,7 +178,7 @@ article p {
     width: 1.25rem;
     justify-content: center;
     align-items: center;
-    position: relative;
+    position: fixed;
     z-index: 100;/* 重なり順を一番上にする */
     cursor: pointer;
     margin-top: 50px;
