--- a/articles/css-articles/style.css
+++ b/articles/css-articles/style.css
@@ -167,7 +167,7 @@ article p {
     width: 60px;
     justify-content: center;
     align-items: center;
-    position: relative;
+    position: fixed;
     z-index: 100;/* 重なり順を一番上にする */
     cursor: pointer;
     margin-top: 24px;
