--- a/profile/css/mobile-style.css
+++ b/profile/css/mobile-style.css
@@ -170,7 +170,7 @@ footer p {
     width: 1.25rem;
     justify-content: center;
     align-items: center;
-    position: relative;
+    position: fixed;
     z-index: 100;/* 重なり順を一番上にする */
     cursor: pointer;
     margin-top: 50px;
