Arrenge a position of button

--- a/articles/css/style.css
+++ b/articles/css/style.css
@@ -155,6 +155,7 @@ footer p {
     z-index: 100;/* 重なり順を一番上にする */
     cursor: pointer;
     margin-top: 24px;
+    margin-right: 40px;
   }
   
   /* ハンバーガーメニューのアイコン */
