--- a/articles/css-articles/style.css
+++ b/articles/css-articles/style.css
@@ -171,6 +171,7 @@ article p {
     z-index: 100;/* 重なり順を一番上にする */
     cursor: pointer;
     margin-top: 24px;
+    margin-right: 40px;
   }
   
   /* ハンバーガーメニューのアイコン */
