--- a/css/mobile-style.css
+++ b/css/mobile-style.css
@@ -84,6 +84,7 @@ img {
     z-index: 100;/* 重なり順を一番上にする */
     cursor: pointer;
     margin-top: 50px;
+    margin-right: 40px;
   }
   
   /* ハンバーガーメニューのアイコン */
