--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,7 @@ img {
     z-index: 100;/* 重なり順を一番上にする */
     cursor: pointer;
     margin-top: 24px;
+    margin-right: 40px;
   }
   
   /* ハンバーガーメニューのアイコン */
