--- a/profile/css/mobile-style.css
+++ b/profile/css/mobile-style.css
@@ -174,7 +174,7 @@ footer p {
     z-index: 100;/* 重なり順を一番上にする */
     cursor: pointer;
     margin-top: 50px;
-    margin-right: 40px;
+    right: 40px;
   }
   
   /* ハンバーガーメニューのアイコン */
