Add shodow to button

--- a/profile/css/mobile-style.css
+++ b/profile/css/mobile-style.css
@@ -189,6 +189,7 @@ footer p {
     background: whitesmoke;
     transition: 0.5s;
     position: absolute;
+    box-shadow: 0px 0px 0px 1px #333;
   }
   
   /* 三本線の一番上の棒の位置調整 */
@@ -210,11 +211,15 @@ footer p {
   #drawer_input:checked ~ .drawer_open span::before {
     bottom: 0;
     transform: rotate(45deg);
+    background: whitesmoke;
+    box-shadow: 0px 0px 0px 1px rgba(255, 255, 255, 0);
   }
   
   #drawer_input:checked ~ .drawer_open span::after {
     top: 0;
     transform: rotate(-45deg);
+    background: whitesmoke;
+    box-shadow: 0px 0px 0px 1px rgba(255, 255, 255, 0);
   }
     
 /* メニューのデザイン*/
