--- a/profile/css/style.css
+++ b/profile/css/style.css
@@ -189,33 +189,38 @@ footer p {
     background: white;
     transition: 0.5s;
     position: absolute;
-  }
-  
-  /* 三本線の一番上の棒の位置調整 */
-  .drawer_open span:before {
-    bottom: 8px;
-  }
-  
-  /* 三本線の一番下の棒の位置調整 */
-  .drawer_open span:after {
-    top: 8px;
-  }
-  
-  /* アイコンがクリックされたら真ん中の線を透明にする */
-  #drawer_input:checked ~ .drawer_open span {
-    background: rgba(255, 255, 255, 0);
-  }
-  
-  /* アイコンがクリックされたらアイコンが×印になように上下の線を回転 */
-  #drawer_input:checked ~ .drawer_open span::before {
-    bottom: 0;
-    transform: rotate(45deg);
-  }
-  
-  #drawer_input:checked ~ .drawer_open span::after {
-    top: 0;
-    transform: rotate(-45deg);
-  }
+    box-shadow: 0px 0px 0px 1px #333;
+}
+
+/* 三本線の一番上の棒の位置調整 */
+.drawer_open span:before {
+  bottom: 8px;
+}
+
+/* 三本線の一番下の棒の位置調整 */
+.drawer_open span:after {
+  top: 8px;
+}
+
+/* アイコンがクリックされたら真ん中の線を透明にする */
+#drawer_input:checked ~ .drawer_open span {
+  background: rgba(255, 255, 255, 0);
+}
+
+/* アイコンがクリックされたらアイコンが×印になように上下の線を回転 */
+#drawer_input:checked ~ .drawer_open span::before {
+  bottom: 0;
+  transform: rotate(45deg);
+  background: whitesmoke;
+  box-shadow: 0px 0px 0px 1px rgba(255, 255, 255, 0);
+}
+
+#drawer_input:checked ~ .drawer_open span::after {
+  top: 0;
+  transform: rotate(-45deg);
+  background: whitesmoke;
+  box-shadow: 0px 0px 0px 1px rgba(255, 255, 255, 0);
+}
     
 /* メニューのデザイン*/
 .nav_content {
