--- a/articles/css-articles/mobile-style.css
+++ b/articles/css-articles/mobile-style.css
@@ -182,7 +182,7 @@ article p {
     z-index: 100;/* 重なり順を一番上にする */
     cursor: pointer;
     margin-top: 50px;
-    right: 40px;
+    right: 10%;
   }
   
   /* ハンバーガーメニューのアイコン */
