--- a/css/mobile-style.css
+++ b/css/mobile-style.css
@@ -84,7 +84,7 @@ img {
     z-index: 100;/* 重なり順を一番上にする */
     cursor: pointer;
     margin-top: 50px;
-    right: 40px;
+    right: 10%;
   }
   
   /* ハンバーガーメニューのアイコン */
